Polish Arc code to use Java 11 collection methods