@@ -1,9 +1,6 @@
 package io.quarkus.arc.impl;
 
 import java.lang.reflect.Type;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 import javax.enterprise.context.spi.CreationalContext;
 import javax.enterprise.event.Event;
@@ -11,8 +8,7 @@ import javax.enterprise.inject.spi.InjectionPoint;
 
 public class EventBean extends BuiltInBean<Event<?>> {
 
-    public static final Set<Type> EVENT_TYPES = Collections
-            .unmodifiableSet(new HashSet<>(Arrays.asList(Event.class, Object.class)));
+    public static final Set<Type> EVENT_TYPES = Set.of(Event.class, Object.class);
 
     @Override
     public Set<Type> getTypes() {
